--- a/templates/answer.html
+++ b/templates/answer.html
@@ -37,19 +37,26 @@
     </nav>
 
     <div class="container theme-showcase" role="main">
-
+      {% for question in questions %}
       <div class="page-header">
-        <h1>What?</h1>
+        <h1>{{user.name}}</h1>
+        <h1>{{question.question_text}}</h1>
       </div>
         <div class="row">
           <div class="col-lg-12">
             <div class="well bs-component">
-              <form class="form-horizontal">
+              <form class="form-horizontal" method="post" action="{{url_for('answer_question', question_id=question.id)}}">
                 <fieldset>
                   <div class="form-group">
                     <label for="textArea" class="col-lg-2 control-label">Answer</label>
                     <div class="col-lg-10">
-                      <textarea class="form-control" rows="3" id="textArea"></textarea>
+                      <textarea name="answer" class="form-control" rows="3" id="textArea"></textarea>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="textArea" class="col-lg-2 control-label">Answered</label>
+                    <div class="col-lg-10">
+                      <textarea name="answered" class="form-control" rows="3" id="textArea">{{question.answer_text}}</textarea>
                     </div>
                   </div>
                   <div class="form-group">
@@ -62,6 +69,7 @@
             </div>
           </div>
         </div>
+        {%endfor%}
       </div>
     </div> <!-- /container -->
 
