--- a/templates/answer.html
+++ b/templates/answer.html
@@ -39,8 +39,8 @@
     <div class="container theme-showcase" role="main">
       {% for question in questions %}
       <div class="page-header">
-        <h1>{{user.name}}</h1>
-        <h1>{{question.question_text}}</h1>
+        <h1>Asked_by: {{question.name}}</h1>
+        <h1>Question: {{question.question_text}}</h1>
       </div>
         <div class="row">
           <div class="col-lg-12">
@@ -48,17 +48,18 @@
               <form class="form-horizontal" method="post" action="{{url_for('answer_question', question_id=question.id)}}">
                 <fieldset>
                   <div class="form-group">
-                    <label for="textArea" class="col-lg-2 control-label">Answer</label>
+                    <label for="textArea" class="col-lg-2 control-label">Answer:</label>
                     <div class="col-lg-10">
                       <textarea name="answer" class="form-control" rows="3" id="textArea"></textarea>
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="textArea" class="col-lg-2 control-label">Answered</label>
+                    <label for="textArea" class="col-lg-2 control-label">Answered:</label>
                     <div class="col-lg-10">
-                      <textarea name="answered" class="form-control" rows="3" id="textArea">{{question.answer_text}}</textarea>
+                      <p>'{{question.answer_text}}'</p>
                     </div>
                   </div>
+                  
                   <div class="form-group">
                     <div class="col-lg-10 col-lg-offset-2">
                       <button type="submit" class="btn btn-primary">Submit</button>
