--- a/templates/home.html
+++ b/templates/home.html
@@ -29,8 +29,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="{{ url_for('login') }}">Login</a></li>
+            <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li class="active"><a href="{{ url_for('login') }}">Login</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
             <li><a href="{{ url_for('ask') }}">Ask Question</a></li>
             <li><a href="{{ url_for('answer') }}">Answer Questions</a></li>
@@ -41,30 +41,44 @@
         <!--/.nav-collapse -->
       </div>
     </nav>
-
     <div class="container theme-showcase" role="main">
       <div class="page-header">
         <h1>Hi {{user.name}}</h1>
+        <h1>Not Answered Questions</h1>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="list-group">
+            {%for us in users%} {%if us.answer_text=='Null'%}
+            <a
+              href="{{url_for('answer_question', question_id=us.id)}}"
+              class="list-group-item"
+            >
+              <h4 class="list-group-item-heading">{{us.id}}</h4>
+              <p class="list-group-item-text">Asked by:{{us.name}}</p>
+              <p class="list-group-item-text">Expert: {{user.name}}</p>
+            </a>
+            {%endif%} {%endfor%}
+          </div>
+        </div>
+        <!-- /.col-lg-12 -->
+      </div>
+      <div class="page-header">
         <h1>Answered Questions</h1>
       </div>
       <div class="row">
         <div class="col-lg-12">
           <div class="list-group">
-            <a href="#" class="list-group-item">
-              <h4 class="list-group-item-heading">Question One</h4>
-              <p class="list-group-item-text">Asked by: Herbert</p>
-              <p class="list-group-item-text">Answered by: Anthony</p>
+            {%for us in users%} {%if us.answer_text!='Null'%}
+            <a
+              href="{{url_for('answer_question', question_id=us.id)}}"
+              class="list-group-item"
+            >
+              <h4 class="list-group-item-heading">{{us.id}}</h4>
+              <p class="list-group-item-text">Asked by:{{us.name}}</p>
+              <p class="list-group-item-text">Expert: {{user.name}}</p>
             </a>
-            <a href="#" class="list-group-item">
-              <h4 class="list-group-item-heading">Question Two</h4>
-              <p class="list-group-item-text">Asked by: Herbert</p>
-              <p class="list-group-item-text">Answered by: Anthony</p>
-            </a>
-            <a href="#" class="list-group-item">
-              <h4 class="list-group-item-heading">Question Three</h4>
-              <p class="list-group-item-text">Asked by: Herbert</p>
-              <p class="list-group-item-text">Answered by: Anthony</p>
-            </a>
+            {%endif%} {%endfor%}
           </div>
         </div>
         <!-- /.col-lg-12 -->
