--- a/templates/login.html
+++ b/templates/login.html
@@ -24,8 +24,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="#">Home</a></li>
+            <li class="active"><a href="#">Login</a></li>
             <li><a href="#">Register</a></li>
             <li><a href="#">Ask Question</a></li>
             <li><a href="#">Answer Questions</a></li>
