--- a/templates/answer.html
+++ b/templates/answer.html
@@ -1,78 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-    <title>Answer Question</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
-    
-    <link href="{{ url_for('static', filename='theme.css') }}" rel="stylesheet">
-  </head>
-
-  <body>
-
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Questions & Answers</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">Ask Question</a></li>
-            <li><a href="#">Answer Questions</a></li>
-            <li><a href="#">User Setup</a></li>
-            <li><a href="#">Logout</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container theme-showcase" role="main">
-      {% for question in questions %}
-      <div class="page-header">
-        <h1>Asked_by: {{question.name}}</h1>
-        <h1>Question: {{question.question_text}}</h1>
-      </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="well bs-component">
-              <form class="form-horizontal" method="post" action="{{url_for('answer_question', question_id=question.id)}}">
-                <fieldset>
-                  <div class="form-group">
-                    <label for="textArea" class="col-lg-2 control-label">Answer:</label>
-                    <div class="col-lg-10">
-                      <textarea name="answer" class="form-control" rows="3" id="textArea"></textarea>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="textArea" class="col-lg-2 control-label">Answered:</label>
-                    <div class="col-lg-10">
-                      <p>'{{question.answer_text}}'</p>
-                    </div>
-                  </div>
-                  
-                  <div class="form-group">
-                    <div class="col-lg-10 col-lg-offset-2">
-                      <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                  </div>
-                </fieldset>
-              </form>
+{%extends 'base.html'%} {%from 'macro.html' import links%} {%block
+title%}Home{%endblock%} {%block nav%}{%endblock%} {%block body%}
+<div class="page-header">
+  <h1>Asked_by: {{question.name}}</h1>
+  <h1>Question: {{question.question_text}}</h1>
+</div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="well bs-component">
+      <form
+        class="form-horizontal"
+        method="post"
+        action="{{url_for('answer', question_id=question.id)}}"
+      >
+        <fieldset>
+          <div class="form-group">
+            <label for="textArea" class="col-lg-2 control-label">Answer:</label>
+            <div class="col-lg-10">
+              <textarea
+                name="answer"
+                class="form-control"
+                rows="3"
+                id="textArea"
+              ></textarea>
             </div>
           </div>
-        </div>
-        {%endfor%}
-      </div>
-    </div> <!-- /container -->
+          <div class="form-group">
+            <label for="textArea" class="col-lg-2 control-label"
+              >Answered:</label
+            >
+            <div class="col-lg-10">
+              {%if question.answer_text!='Null'%}
+              <p>'{{question.answer_text}}'</p>
+              {%else%}
+              <p>'Not answered'</p>
+              {%endif%}
+            </div>
+          </div>
 
-  </body>
-</html>
+          <div class="form-group">
+            <div class="col-lg-10 col-lg-offset-2">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </div>
+        </fieldset>
+      </form>
+    </div>
+  </div>
+</div>
+{%endblock%}
