--- a/templates/unanswered.html
+++ b/templates/unanswered.html
@@ -1,66 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+{%extends 'base.html'%} {%from 'macro.html' import links%} {%block
+title%}Home{%endblock%} {%block nav%}{%endblock%} {%block body%}
 
-    <title>Unaswered Questions</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
-    
-    <link href="{{ url_for('static', filename='theme.css') }}" rel="stylesheet">
-  </head>
-
-  <body>
-
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Questions & Answers</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">Ask Question</a></li>
-            <li><a href="#">Answer Questions</a></li>
-            <li><a href="#">User Setup</a></li>
-            <li><a href="#">Logout</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container theme-showcase" role="main">
-
-      <div class="page-header">
-        <h1>Questions For You</h1>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="list-group">
-            <a href="#" class="list-group-item">
-              <h4 class="list-group-item-heading">Question One</h4>
-              <p class="list-group-item-text">Asked by: Herbert</p>
-            </a>
-            <a href="#" class="list-group-item">
-              <h4 class="list-group-item-heading">Question Two</h4>
-              <p class="list-group-item-text">Asked by: Herbert</p>
-            </a>
-            <a href="#" class="list-group-item">
-              <h4 class="list-group-item-heading">Question Three</h4>
-              <p class="list-group-item-text">Asked by: Herbert</p>
-            </a>
-          </div>
-        </div><!-- /.col-lg-12 -->
-      </div>
-
-    </div> <!-- /container -->
-
-  </body>
-</html>
+<div class="page-header">
+  <h1>Hi {{user.name}}</h1>
+  <h1>Not Answered Questions</h1>
+</div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="list-group">
+      {%for us in questions%} {%if us.answer_text=='Null'%}
+      <a
+        href="{{url_for('answer', question_id=us.id)}}"
+        class="list-group-item"
+      >
+        <h4 class="list-group-item-heading">{{us.id}}</h4>
+        <p class="list-group-item-text">Asked by:{{us.name}}</p>
+        <p class="list-group-item-text">Expert: {{user.name}}</p>
+      </a>
+      {%endif%} {%endfor%}
+    </div>
+  </div>
+  <!-- /.col-lg-12 -->
+</div>
+<div class="page-header">
+  <h1>Answered Questions</h1>
+</div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="list-group">
+      {%for us in questions%} {%if us.answer_text!='Null'%}
+      <a
+        href="{{url_for('answer', question_id=us.question.id)}}"
+        class="list-group-item"
+      >
+        <h4 class="list-group-item-heading">{{us.question.question_text}}</h4>
+        <p class="list-group-item-text">Asked by:{{us.user.name}}</p>
+        <p class="list-group-item-text">Expert: {{user.name}}</p>
+      </a>
+      {%endif%} {%endfor%}
+    </div>
+  </div>
+  <!-- /.col-lg-12 -->
+</div>
+</div>
+{%endblock%}
