--- a/templates/users.html
+++ b/templates/users.html
@@ -1,48 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-    <title>Users</title>
-
-    <!-- Bootstrap core CSS -->
-    <link
-      href="{{ url_for('static', filename='bootstrap.min.css') }}"
-      rel="stylesheet"
-    />
-
-    <link
-      href="{{ url_for('static', filename='theme.css') }}"
-      rel="stylesheet"
-    />
-  </head>
-
-  <body>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Questions & Answers</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">Ask Question</a></li>
-            <li><a href="#">Answer Questions</a></li>
-            <li><a href="#">User Setup</a></li>
-            <li><a href="#">Logout</a></li>
-          </ul>
-        </div>
-        <!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container theme-showcase" role="main">
+{%extends 'base.html'%} {%from 'macro.html' import links%} {%block
+  title%}Home{%endblock%} {%block nav%}{%endblock%} {%block body%}
       <div class="page-header">
         <h1>Users</h1>
         <h6>Click to promote to expert</h6>
@@ -62,8 +19,4 @@
           </div>
         </div>
         <!-- /.col-lg-12 -->
-      </div>
-    </div>
-    <!-- /container -->
-  </body>
-</html>
+{%endblock%}
