--- a/templates/register.html
+++ b/templates/register.html
@@ -45,6 +45,7 @@ title%}Home{%endblock%} {%block nav%}{%endblock%} {%block body%}
           </div>
         </fieldset>
       </form>
+      <h3>Already have an account? <a href="/login">Login</a></h3>
     </div>
     {%endblock%}
   </div>
