--- a/templates/unanswered.html
+++ b/templates/unanswered.html
@@ -30,11 +30,11 @@ title%}Home{%endblock%} {%block nav%}{%endblock%} {%block body%}
     <div class="list-group">
       {%for us in questions%} {%if us.answer_text!='Null'%}
       <a
-        href="{{url_for('answer', question_id=us.question.id)}}"
+        href="{{url_for('answer', question_id=us.id)}}"
         class="list-group-item"
       >
-        <h4 class="list-group-item-heading">{{us.question.question_text}}</h4>
-        <p class="list-group-item-text">Asked by:{{us.user.name}}</p>
+        <h4 class="list-group-item-heading">{{us.question_text}}</h4>
+        <p class="list-group-item-text">Asked by:{{us.name}}</p>
         <p class="list-group-item-text">Expert: {{user.name}}</p>
       </a>
       {%endif%} {%endfor%}
