--- a/templates/login.html
+++ b/templates/login.html
@@ -45,6 +45,7 @@ title%}Home{%endblock%} {%block nav%}{%endblock%} {%block body%}
           </div>
         </fieldset>
       </form>
+      <h3>Don't have an account? <a href="/register">Register</a></h3>
     </div>
   </div>
 </div>
