--- a/templates/users.html
+++ b/templates/users.html
@@ -1,22 +1,28 @@
 {%extends 'base.html'%} {%from 'macro.html' import links%} {%block
-  title%}Home{%endblock%} {%block nav%}{%endblock%} {%block body%}
-      <div class="page-header">
-        <h1>Users</h1>
-        <h6>Click to promote to expert</h6>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="list-group">
-            {% for user in users %}
-            <a
-              href="{{ url_for('change_status',user_id=user.id) }}"
-              class="list-group-item {% if user.expert %} active {% endif %}"
-            >
-              <h4 class="list-group-item-heading">{{ user.name }}</h4>
-            </a>
-            <a class="list-group-item-heading href="{{ url_for('delete_user',user_id=user.id) }}">❌</a>
-            {% endfor %}
-          </div>
-        </div>
-        <!-- /.col-lg-12 -->
-{%endblock%}
+title%}Home{%endblock%} {%block nav%}{%endblock%} {%block body%}
+<div class="page-header">
+  <h1>Users</h1>
+  <h6>Click to promote to expert</h6>
+</div>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="list-group">
+      {%if user%}
+      <h1>Hiii {{user.name}}</h1>
+      {% for user_on in users %}
+      <a
+        href="{{ url_for('change_status',user_id=user_on.id) }}"
+        class="list-group-item {% if user_on.expert %} active {% endif %}"
+      >
+        <h4 class="list-group-item-heading">{{ user_on.name }}</h4>
+        <a href="{{ url_for('delete_user',user_id=user_on.id) }}"
+          >Delete user❌</a
+        >
+      </a>
+
+      {% endfor %} {%endif%}
+    </div>
+  </div>
+  <!-- /.col-lg-12 -->
+  {%endblock%}
+</div>
