Seems to be finished

--- a/templates/login.html
+++ b/templates/login.html
@@ -45,7 +45,9 @@ title%}Home{%endblock%} {%block nav%}{%endblock%} {%block body%}
           </div>
         </fieldset>
       </form>
-      <h3>Don't have an account? <a href="/register">Register</a></h3>
+      <h3>
+        Don't have an account? <a href="{{url_for('register')}}">Register</a>
+      </h3>
     </div>
   </div>
 </div>
